RESOLVED FIXED210470
REGRESSION (r259587): bterlson/eshost throws during init in strict mode
https://bugs.webkit.org/show_bug.cgi?id=210470
Summary REGRESSION (r259587): bterlson/eshost throws during init in strict mode
Alexey Shvayka
Reported 2020-04-13 18:18:50 PDT
bterlson/eshost is used by bterlson/test262-harness, which is used by https://test262.report. As of r259587, JSC fails all tests in strict mode. During init, bterlson/eshost does `$262.IsHTMLDDA = function() {...}`, which causes TypeError because "IsHTMLDDA" property has no setter.
Attachments
Patch (3.28 KB, patch)
2020-04-13 18:33 PDT, Alexey Shvayka
no flags
Alexey Shvayka
Comment 1 2020-04-13 18:33:18 PDT
Ross Kirsling
Comment 2 2020-04-13 18:54:44 PDT
Comment on attachment 396369 [details] Patch Holy cow, good work. I was having a hell of a time trying to track down where this was coming from myself.
EWS
Comment 3 2020-04-13 20:05:27 PDT
Committed r260057: <https://trac.webkit.org/changeset/260057> All reviewed patches have been landed. Closing bug and clearing flags on attachment 396369 [details].
Radar WebKit Bug Importer
Comment 4 2020-04-13 20:06:14 PDT
Note You need to log in before you can comment on or make changes to this bug.